# neoash

./: .gitignore  AGENTS.md  Makefile  Makefile.am  README  UPSTREAM.md  config-compat.h.in  configure.ac  meson.build  meson_options.txt  phone-build.sh
include/: err.h  libcasper.h  paths.h  stdlib.h  string.h  unistd.h  wchar.h
include/sys/: cdefs.h  param.h  stat.h
src/: Makefile.am  alias.c  cd.c  eval.c  exec.c  exec.h  expand.c  histedit.c  input.c  input.h  jobs.c  jobs.h  mail.c  main.c  memalloc.h  meson.build  miscbltin.c  mknodes.c  mktokens  neoash.1  nodetypes  options.c  options.h  output.c  parser.c  redir.c  redir.h  show.c  trap.c  trap.h  var.c
src/bltin/: kill.c  printf.c  test.c
src/compat/: mktemp.c  signames.c  strlfuncs.c
test-posix/freebsd/: Makefile.local  run-freebsd-suite.sh
test-posix/smoosh/: .gitignore  Makefile
test-posix/yash/: Makefile  README.md  report.sh  resetsig.c  return-p.tst  run-posix.sh  run-test.sh  summarize.sh  testtty-p.tst
